# quadrotor

./: .gitignore  README.md
src/Simulator/gazebo_simulator/launch_basic/: sitl_indoor.launch  sitl_outdoor.launch
src/Simulator/gazebo_simulator/launch_planning/: sitl_fast_planning_rgbd.launch
src/Simulator/sitl_launch/: CMakeLists.txt  package.xml
src/Simulator/sitl_launch/launch/: gazebo_indoor_px4.launch  gazebo_outdoor_px4.launch  kino_replan_sitl.launch  px4_bridge_sitl.launch  px4_bridge_sitl_DF.launch
src/Simulator/sitl_sh/: gazebo_outdoor_polygon.sh  gazebo_outdoor_rtk.sh  gazebo_sampleRTK_outdoor_DF.sh  gazebo_sample_outdoor.sh
src/control/DF/include/: model.h  pos_controller_DF.h
src/mission/: CMakeLists.txt  package.xml
src/mission/include/: MissionRtk.h  MissionSample.h  PolygonMission.h
src/mission/launch/: mission_rtk.launch  mission_sample.launch  stereo_rtk.launch
src/mission/src/: MissionRtk.cpp  MissionSample.cpp  PolygonMission.cpp
src/mission/test/: MissionRtk_node.cpp  MissionSample_node.cpp  PolygonMission_node.cpp
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: ControlCommand.msg  DroneState.msg  PositionReference.msg
src/perception/: package.xml
src/perception/monoDepth/: CMakeLists.txt
src/perception/monoDepth/src/: convert.py  detector.py  detector_depthpoint_rtk.py  detector_depthpoint_rtk_old.py
src/perception/mr72/: CMakeLists.txt  package.xml
src/perception/mr72/msg/: radar.msg  radar_pkg.msg
src/perception/mr72/src/: can_alarm.cpp  can_new.cpp  can_radar_show.cpp
src/perception/src/: image_depth.py
src/planning/Fast-Planner/fast_planner/bspline_opt/src/: bspline_optimizer.cpp
src/planning/Fast-Planner/fast_planner/offboard_pkg/: CMakeLists.txt  package.xml
src/planning/Fast-Planner/fast_planner/offboard_pkg/src/: offboard_node.cpp
src/planning/Fast-Planner/fast_planner/path_searching/include/path_searching/: kinodynamic_astar.h
src/planning/Fast-Planner/fast_planner/path_searching/src/: kinodynamic_astar.cpp
src/planning/Fast-Planner/fast_planner/plan_env/include/plan_env/: edt_environment.h  sdf_map.h
src/planning/Fast-Planner/fast_planner/plan_manage/: CMakeLists.txt  package.xml
src/planning/Fast-Planner/fast_planner/plan_manage/config/: gazebo.rviz
src/planning/Fast-Planner/fast_planner/plan_manage/include/plan_manage/: planner_manager.h
src/planning/Fast-Planner/fast_planner/plan_manage/launch/: kino_algorithm.xml  kino_replan.launch
src/planning/Fast-Planner/fast_planner/plan_manage/src/: fast_planner_node.cpp  kino_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/planning/Fast-Planner/uav_simulator/Utils/waypoint_generator/launch/: waypoint_generator.launch
src/planning/easy_planner/: CMakeLists.txt  package.xml
src/planning/easy_planner/include/: Polygon.h
src/planning/easy_planner/src/: Polygon.cpp  polygon_node.cpp
src/planning/fast_planner/bspline/src/: non_uniform_bspline.cpp
src/planning/fast_planner/offboard_pkg/launch/: auto_goal.launch
src/planning/fast_planner/plan_env/include/plan_env/: polynomial_traj.hpp
src/planning/fast_planner/plan_env/src/: sdf_map.cpp
src/planning/fast_planner/plan_manage/: CMakeLists.txt  package.xml
src/planning/fast_planner/plan_manage/include/plan_manage/: kino_replan_fsm.h
src/planning/fast_planner/plan_manage/launch/: kino_algorithm.xml  kino_replan_gazebo.launch  kino_replan_test.launch  rviz_gazebo.launch  tf_transform.launch
src/planning/fast_planner/plan_manage/src/: kino_replan_fsm.cpp
src/planning/fast_planner/traj_utils/src/: planning_visualization.cpp
src/px4_bridge/: CMakeLists.txt  package.xml
src/px4_bridge/config/mavros_config/: px4_config_off.yaml  px4_pluginlists_off.yaml
src/px4_bridge/include/: CommandToFcu.h  CommandToFcuAtt.h  StatesFromFcu.h  StatesToFcu.h
src/px4_bridge/launch/: px4_bridge.launch  px4_mavros.launch  t265_bridge.launch
src/px4_bridge/src/: CommandToFcu.cpp  CommandToFcuAtt.cpp  StatesFromFcu.cpp  StatesToFcu.cpp
src/sh/: mono_depth.sh  realsense_depth.sh  rviz.sh  sample.sh  sample_rtk.sh  stereo.sh  stereo_rtk.sh
wiki/: mmw_radar.md  代码规范.md  安装和编译.md  设计思想.md
